--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mui/joy": "^5.0.0-beta.36",
     "bootstrap": "^5.3.3",
     "next": "14.2.3",
     "react": "^18",
